# OS_BOOTCAMP

./: .env.example  .gitignore  CHALLENGE_INSTRUCTION_ENG.md  FEATURES.md  INSTRUCTIONS.md  README.md  pyproject.toml
.claude/skills/project-orchestrator/assets/: Dockerfile-python.txt  Dockerfile-rust.txt  docker-compose.yaml  github-actions-astro.yaml  gitignore-python.txt  gitignore-rust.txt  gitignore-typescript.txt  pre-commit-python.yaml  pre-commit-rust.yaml  pre-commit-typescript.yaml
.claude/skills/project-orchestrator/references/: python-conventions.md  readme-structure.md  rust-conventions.md  typescript-conventions.md
scripts/: dev.py  test_retrieval_node.py
src/adapters/conversation/: chat_agent.py
src/adapters/formatting/: markdown_formatter.py
src/adapters/loop/: loop_controller.py
src/adapters/retrieval/: academic_adapter.py  finance_adapter.py  orchestrator.py  reddit_adapter.py  scraper_adapter.py  serp_adapter.py  social_adapter.py  twitter_adapter.py
src/adapters/synthesis/: synthesizer.py
src/adapters/tasks/: decomposer.py
src/adapters/verification/: verifier.py
src/agents/: graph.py
src/agents/nodes/: conversation_node.py  decomposition_node.py  formatting_node.py  loop_node.py  retrieval_node.py  synthesis_node.py  verification_node.py
src/app/: CHAINLIT_FIX.md  app.py  chainlit_middleware.py  config.py  main.py
src/domain/: models.py  ports.py  prompts.py
