[project]
name = "terafinder"
version = "0.1.0"
description = "Description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.9.0",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "openai>=2.7.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "tavily-python>=0.7.12",
]

[project.scripts]
dev='scripts.dev:dev'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

